--- a/juliain108.html
+++ b/juliain108.html
@@ -1,18 +1,18 @@
 <html>
   <head>
      <body bgcolor="pink" style="color:black">
-      <title>Régua de cálculo </title>
-  <head>
-  <h1 align= "center">Régua de cálculo </h1>
-   <p> A régua de cálculo foi inventada em 1622, pelo matemático William Oughtred. Além de um inglês matemático, ele também era pastor anglicano.
-  Oughtred foi o primeiro a usar duas dessas escalas deslizando uma pela outra para realizar a multiplicação e divisão direta.<p>
+      <title>RÃ©gua de cÃ¡lculo </title>
+  </head>
+  <h1 align= "center">RÃ©gua de cÃ¡lculo </h1>
+   <p> A rÃ©gua de cÃ¡lculo foi inventada em 1622, pelo matemÃ¡tico William Oughtred. AlÃ©m de um inglÃªs matemÃ¡tico, ele tambÃ©m era pastor anglicano.
+  Oughtred foi o primeiro a usar duas dessas escalas deslizando uma pela outra para realizar a multiplicaÃ§Ã£o e divisÃ£o direta.<p>
   <center><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Wenceslas_Hollar_-_William_Oughtred.jpg/200px-Wenceslas_Hollar_-_William_Oughtred.jpg"></center>
-    Era utilizado para efetuar operações de multiplicação de uma maneira mais fácil na época. 
-    Atualmente não é muito utilizada, pois com o passar dos anos, desenvolveram novos métodos de multiplicação mais eficientes e eficazes. 
-Possuem 2 réguas, se alinharmos a de baixo, posicionando o número 1 abaixo do número que queremos multiplicar, obteremos o resultado na régua de cima.
+    Era utilizado para efetuar operaÃ§Ãµes de multiplicaÃ§Ã£o de uma maneira mais fÃ¡cil na Ã©poca. 
+    Atualmente nÃ£o Ã© muito utilizada, pois com o passar dos anos, desenvolveram novos mÃ©todos de multiplicaÃ§Ã£o mais eficientes e eficazes. 
+Possuem 2 rÃ©guas, se alinharmos a de baixo, posicionando o nÃºmero 1 abaixo do nÃºmero que queremos multiplicar, obteremos o resultado na rÃ©gua de cima.
   <center><img src="https://n.i.uol.com.br/licaodecasa/ensmedio/matematica/regua.jpg" ></center>                           
- <p>Era utilizada para calcular o consumo de combustíveis de bombardeiros, navegação de navios e aviaçõesNão fazia raiz quadrada, frações, notação científica, porcentagem, entre outros. 
-Sua função era calcular multiplicação e divisão.Não fazia raiz quadrada, frações, notação científica, porcentagem, entre outros. 
-Foi substituída pelos métodos lançados após 1622, como exemplo: Pascaline, Tabulador de Hollerith, Máquina de diferenças e máquina análitica de Charles Babbage e a calculadora.
-	  <body>
+ <p>Era utilizada para calcular o consumo de combustÃ­veis de bombardeiros, navegaÃ§Ã£o de navios e aviaÃ§ÃµesNÃ£o fazia raiz quadrada, fraÃ§Ãµes, notaÃ§Ã£o cientÃ­fica, porcentagem, entre outros. 
+Sua funÃ§Ã£o era calcular multiplicaÃ§Ã£o e divisÃ£o.NÃ£o fazia raiz quadrada, fraÃ§Ãµes, notaÃ§Ã£o cientÃ­fica, porcentagem, entre outros. 
+Foi substituÃ­da pelos mÃ©todos lanÃ§ados apÃ³s 1622, como exemplo: Pascaline, Tabulador de Hollerith, MÃ¡quina de diferenÃ§as e mÃ¡quina anÃ¡litica de Charles Babbage e a calculadora.
+	</body>
 </html>
